--- a/One-Page Website/css/one_page_website.css
+++ b/One-Page Website/css/one_page_website.css
@@ -1,7 +1,7 @@
 font-family: "Helvetica, sans-serif"
 font-size: "18pt"
 
-.input{
+input{
     width:400px;
     margin: 5px;
     border:2px solid navy blue;
