--- a/PROJECT/CSS/index_style.css
+++ b/PROJECT/CSS/index_style.css
@@ -1,5 +1,68 @@
 body {
     background-color: #fff;
     }
+    #home>
+    <div>
+    <div>
+    <span>Fantasy#Land</span>
+    </div>
+    </div>
+    </div>
+    <!--END#HOME-->
     
+    <!--GALLERY-->
+    <section>
+    <div#id= {
+        h1 {
+        }
+        div {
+          div {
+            div {
+            }
+            div {
+              h3 {
+              }
+            }
+          }
+        }
+      }
+      section {
+        #contact {
+          div {
+            h1 {
+            }
+            h2 {
+              span {
+              }
+            }
+            div {
+              form {
+              }
+              .rsvp {
+              }
+              .form-spacer {
+                .terms {
+                }
+                div {
+                }
+                div {
+                  input {
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      div {
+        div {
+          ul {
+            #link {
+              &:hover {}
+              &:active {}
+              &:focus {}
+            }
+          }
+        }
+      }
     
